# homelab-dashboard

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  config.yaml  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  services.py  system.py  workers.py
backend/src/core/: __init__.py  config.py  registry.py
backend/src/services/: __init__.py  health_checker.py
backend/src/ws/: __init__.py  manager.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/dashboard/: MemoryGauge.tsx  Overview.tsx  ServiceCard.tsx  StatusBadge.tsx  WorkerCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/stores/: dashboardStore.ts
frontend/src/types/: index.ts
scripts/: screenshot.mjs
